@@ -59,6 +59,7 @@ CHANGES IN FLTK 1.3.4					RELEASED: ??? ?? ????
 
 	Bug fixes
 
+	- Fix Fl_Browser if text argument to some methods is NULL (STR #3269).
 	- Fixed missing image release in fluid (STR #2840).
 	- Fixed out-of-bounds memory access in fluid (STR #3263).
 	- fluid doesn't output trailing white space in .fl files after
